Added JAVA_OPTS ability to docker