@@ -3,6 +3,10 @@ LABEL maintainer james@baconi.co.uk
 
 ADD api/target/api.jar /opt/secure-my-bacon/api.jar
 
+WORKDIR /opt/secure-my-bacon
+
+ENV JAVA_OPTS="-Xms256m -Xmx256m -XX:+UseConcMarkSweepGC"
+
 EXPOSE 8080
 
-CMD ["java", "-jar", "-Dspring.profiles.active=heroku,docker", "/opt/secure-my-bacon/api.jar"]
+CMD ["sh", "-c", "java ${JAVA_OPTS} -jar api.jar"]
